save generated image to supabase and bucket

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -2,10 +2,8 @@
   "$schema": "node_modules/wrangler/config-schema.json",
   "name": "imahe-ai",
   "main": "src/index.ts",
-  "compatibility_date": "2025-06-26",
-  // "compatibility_flags": [
-  //   "nodejs_compat"
-  // ],
+  "compatibility_date": "2025-04-21",
+  "compatibility_flags": ["nodejs_compat"],
   // "vars": {
   //   "MY_VAR": "my-variable"
   // },
