--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -2,8 +2,11 @@
   "$schema": "node_modules/wrangler/config-schema.json",
   "name": "imahe-ai",
   "main": "src/index.ts",
-  "compatibility_date": "2025-04-21",
+  "compatibility_date": "2025-06-26",
   "compatibility_flags": ["nodejs_compat"],
+  "triggers": {
+    "crons": ["0 16 * * *"]
+  },
   // "vars": {
   //   "MY_VAR": "my-variable"
   // },
