--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.837.0",
+    "@hono-rate-limiter/cloudflare": "^0.2.2",
     "@supabase/supabase-js": "^2.50.2",
     "hono": "^4.8.3",
     "openai": "^5.7.0"
