--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -7,6 +7,19 @@
   "triggers": {
     "crons": ["0 16 * * *"]
   },
+  "unsafe": {
+    "bindings": [
+      {
+        "name": "RATE_LIMITER",
+        "type": "ratelimit",
+        "namespace_id": "1001",
+        "simple": {
+          "limit": 60,
+          "period": 60
+        }
+      }
+    ]
+  },
   // "vars": {
   //   "MY_VAR": "my-variable"
   // },
